# pi-calculations

./: .gitignore  README.md
pi-leibniz/: CMakeLists.txt
pi-leibniz/src/: main.cpp
pi-monte-carlo/: CMakeLists.txt
pi-monte-carlo/src/: main.cpp
pi-ramanujan/: CMakeLists.txt
pi-ramanujan-MPIR/: CMakeLists.txt  results.txt
pi-ramanujan-MPIR/src/: main.cpp  math.h  pi.h
pi-ramanujan-boost/: CMakeLists.txt  result.txt
pi-ramanujan-boost/src/: main.cpp
pi-ramanujan/src/: main.cpp
